# zkdp-exponential

./: .gitignore  Cargo.toml  README.md  package-lock.json
backendtest/: package-lock.json  package.json  tsconfig.json
backendtest/src/: main.js  main.ts
benches/: ccs_benchmarks.rs
src/: binomial_runner.rs  lib.rs  main.rs  poplar.rs  prio.rs
webdemo/: .gitignore  README.md  ari.txt  backend_reference.md  index.html  package-lock.json  package.json  tailwind.config.js
webdemo/src/: App.css  App.tsx  index.css
webdemo/src/components/morra/: MorraAnimation.tsx
webdemo/src/components/navigation/: GameNavbar.css  GameNavbar.tsx  IntroNavbar.tsx  NavigationButton.tsx
webdemo/src/components/pages/: DPPage.tsx  GameScreen.css  GameScreen.tsx  IntroductionPage.tsx  SigmaProtocolPage.tsx  ZeroKnowledgePage.tsx
webdemo/src/components/ui/: button.tsx
