[package]
name = "dp_client"
version = "0.1.0"
edition = "2021"
authors = ["Ari Biswas <aribiswas3@gmail.com>"]
description = "A pure-Rust implementation for auditable DP"
keywords = [
  "secret-sharing",
  "Shamir",
  "cryptography",
  "secure-computation",
  "mpc",
  "differential privacy"
]

[dependencies]
rand_core = "0.5.1"
coinflip = "*"
getrandom = "0.3"
rand= { package = "rand", version = "0.8.5" }
openssl-sys = "0.9"
openssl = "0.10"
time = "*"
curve25519-dalek = "3"
sha3 = "*"
bulletproofs = "*"
merlin = "*"
curve25519-dalek-ng = "*"
num-bigint = "0.4.6"
actix-web = "4.10.2"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "ccs_benchmarks"
harness = false
